# transformers-aiayn

./: .gitignore  README.md  main.py  pyproject.toml  transformer_notebook.ipynb
src/: check.py  config.py  constants.py  dataset.py  test.py  test_check.py  train.py  train_test.py  transformer.py  utils.py
