[project]
name = "transformers-aiayn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "numpy>=2.3.2",
    "tensorboard>=2.20.0",
    "tokenizers>=0.21.4",
    "torch>=2.7.1",
    "torchmetrics>=1.8.0",
    "tqdm>=4.67.1",
]
